Use enum constants for known options instead of field constants, improve remove fish regex so that order doesn't matter, fix some bugs and refactor code